chore: Rebrand to A.K.Maina System

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Antigravity Context</title>
+  <title>A.K.Maina System</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     :root {
-      /* ANTIGRAVITY PALETTE */
+      /* A.K.Maina System PALETTE */
       --bg: #0f0f11;
       --surface: #18181b;
       --surface-hover: #27272a;
@@ -275,7 +275,7 @@
 
     <!-- HEADER -->
     <div class="brand-header">
-      <div class="brand-logo">Antigravity Traffic</div>
+      <div class="brand-logo">A.K.Maina System</div>
       <div style="font-size:0.9rem; color:var(--text-secondary);">Manual Propeller Mode ●</div>
     </div>
 
