feat: Update copy to Free 50 offer

--- a/index.html
+++ b/index.html
@@ -267,25 +267,20 @@
     <div class="hero">
       <div class="status-pill"><span class="dot"></span> Limit Reset: Today</div>
 
-      <h1>Start with <span style="color:var(--brand-red)">KES 50</span></h1>
-      <p class="subtitle">Secure your first deposit match. <br>Funds are instantly credited for gameplay.</p>
+      <h1>Create an account and get a <span style="color:var(--brand-red)">FREE 50</span></h1>
+      <p class="subtitle">Join the winners circle today. <br>Your free credits are waiting for you.</p>
 
       <div class="offer-card">
-        <div class="offer-row">
-          <div class="offer-item">
-            <h3>Deposit</h3>
-            <div class="val">50.00</div>
-          </div>
-          <div class="plus-icon">+</div>
-          <div class="offer-item">
-            <h3>Bonus</h3>
-            <div class="val">50.00</div>
+        <div class="offer-row" style="justify-content: center; border-bottom: none; padding-bottom: 0;">
+          <div class="offer-item" style="text-align: center;">
+            <h3>Registration Bonus</h3>
+            <div class="val" style="font-size: 2.5rem;">KES 50.00</div>
           </div>
         </div>
 
-        <div class="total-row">Total Playable: KES 100.00</div>
+        <div class="total-row" style="margin-top: 10px;">Instantly Credited</div>
 
-        <a href="https://boompesa.com/" class="cta-button">Claim 100% Match</a>
+        <a href="https://boompesa.com/" class="cta-button">Claim Free 50</a>
       </div>
     </div>
 
