--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       --brand-red: #E31C2D;
       --text-dark: #1F2937;
       --text-light: #6B7280;
-      --bg-page: #F3F4F6;
+      --bg-page: #FFFBEB;
       --white: #FFFFFF;
       --success: #10B981;
     }
@@ -34,7 +34,8 @@
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-      background: var(--white);
+      background: var(--bg-page);
+      /* Match page bg */
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
     }
 
@@ -44,36 +45,20 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      border-bottom: 1px solid #E5E7EB;
-      background: var(--white);
+      border-bottom: 1px solid #FEF3C7;
+      /* Warm border */
+      background: var(--bg-page);
+      /* Match page bg */
     }
 
-    .brand {
-      font-weight: 800;
-      font-size: 1.25rem;
-      color: var(--primary-blue);
-      letter-spacing: -0.5px;
-    }
-
-    .brand span {
-      color: var(--brand-red);
-    }
-
-    .auth-btn {
-      font-size: 0.875rem;
-      font-weight: 600;
-      color: var(--primary-blue);
-      text-decoration: none;
-      padding: 8px 16px;
-      border-radius: 6px;
-      background: #F3F4F6;
-    }
+    /* ... */
 
     /* HERO CARD */
     .hero {
       padding: 32px 24px;
       text-align: center;
-      background: radial-gradient(circle at top, #EFF6FF 0%, #FFFFFF 100%);
+      background: radial-gradient(circle at top, #FDE68A 0%, #FFFBEB 100%);
+      /* Warm Amber Gradient */
     }
 
     .status-pill {
